restyled the home page with logos and everything

--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
 				<div class="content-box">
 					<div class="content-animation">
 						<div class="container">
-							<div class="top-box">
+							<div class="main-box">
+								<div class="logo">
+									<img class="logo-img" src="img/logo.svg" alt="hyperlax-logo">
+									<img class="hyperlax-img" src="img/hyperlax.svg" alt="hyperlax-logo">
+								</div>
 								<div class="description">
-									<h1 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h1>
-									<div id="text-divide">
+									<h1 class="tagline">A real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h1>
+									<!-- <div id="text-divide">
 										<i class="fa fa-instagram fa-lg"></i>
-									</div>
+									</div> -->
 									<ul class="instructions">
 										<li>SIT BACK</li>
 										<li>&bull;</li>
@@ -75,20 +79,20 @@
 										<li>ENJOY THE MUSIC</li>
 									</ul>
 								</div>
-							</div>
-							<div class="bottom-box">
 								<div class="start">
 									<div class="hit-me">
-										<i class="fa fa-play-circle-o fa-3x"></i><h1>HIT ME</h1>
+										<i class="fa fa-play-circle-o fa-3x"></i><h1>HIT ME!</h1>
 									</div>
-									<p><span>Start without music?</span></p>
+									<p><span>Start without music</span></p>
 								</div>
-								<div class="spinner">
-								  <div class="rect1"></div>
-								  <div class="rect2"></div>
-								  <div class="rect3"></div>
-								  <div class="rect4"></div>
-								  <div class="rect5"></div>
+								<div class="spinner-container">
+									<div class="spinner">
+									  <div class="rect1"></div>
+									  <div class="rect2"></div>
+									  <div class="rect3"></div>
+									  <div class="rect4"></div>
+									  <div class="rect5"></div>
+									</div>
 								</div>
 								<div class="social-share">
 									<p>cool enough to share?</p>
@@ -107,7 +111,7 @@
 						<div class="container">
 							<div class="top-box">
 								<div class="location-overlay-toggle">
-									<p>Display location over video?</p>
+									<p>Display location over video</p>
 									<div class="onoffswitch">
 									    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
 									    <label class="onoffswitch-label" for="myonoffswitch">
