--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<title>Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos</title>
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://hyperlax.tv/" /> 
 	<meta property="og:title" content="Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos"/>
 	<meta property="og:site_name" content="Hyperlax"/>
 	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!" />
@@ -67,9 +69,6 @@
 								</div>
 								<div class="description">
 									<h1 class="tagline">A real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h1>
-									<!-- <div id="text-divide">
-										<i class="fa fa-instagram fa-lg"></i>
-									</div> -->
 									<ul class="instructions">
 										<li>SIT BACK</li>
 										<li>&bull;</li>
@@ -82,7 +81,7 @@
 								</div>
 								<div class="start">
 									<div class="hit-me">
-										<i class="fa fa-play-circle-o fa-3x"></i><h1>HIT ME!</h1>
+										<i class="fa fa-play fa-3x"></i><h1>HIT ME!</h1>
 									</div>
 									<p><span>Start without music</span></p>
 								</div>
@@ -98,7 +97,7 @@
 								<div class="social-share">
 									<p>cool enough to share?</p>
 									<a class="social-popup" href="https://twitter.com/intent/tweet/?text=Enjoy%20a%20real-time%20feed%20of%20Instagram's%20latest%20%23Hyperlapse%20videos:%20&url=http%3A%2F%2Fhyperlax.tv&via=taykcrane" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-									<a class="social-popup" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhyperlax.tv" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+									<a class="social-popup" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fhyperlax.tv%2F" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
 								</div>
 								<p class="dark-mode"><i class="fa fa-lightbulb-o fa-3x"></i></p>
 							</div>
@@ -153,7 +152,7 @@
 									<li id="14420313"><span class="playlist-name">Piano</span><span class="num-likes"><i class="fa fa-heart-o"></i> 37</span><div style="clear: both;"></div></li>
 									<li id="51184003"><span class="playlist-name">Ambient</span><span class="num-likes"><i class="fa fa-heart-o"></i> 20</span><div style="clear: both;"></div></li>
 									<li id="13709692"><span class="playlist-name">Chill Hip-Hop</span><span class="num-likes"><i class="fa fa-heart-o"></i> 58</span><div style="clear: both;"></div></li>
-									<li id="45264103"><span class="playlist-name">Artist of the Week</span><span class="num-likes"><i class="fa fa-heart-o"></i> ??</span><div style="clear: both;"></div></li>
+									<li id="90171020"><span class="playlist-name">Artist of the Week</span><span class="num-likes"><i class="fa fa-heart-o"></i> ??</span><div style="clear: both;"></div></li>
 								</ul>
 							</div>
 						</div>	
