updates color pallette

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<meta charset="UTF-8" />
 	<meta name="google" content="notranslate" />
 	<meta http-equiv="Content-Language" content="en_US" />
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -52,7 +53,7 @@
 		<div class="flexitem">
 			<div class="nav">
 				<ul class="nav-items">
-					<li class="home-nav selected"><a href="#"><span>Hyperlax</span></a>
+					<li class="home-nav selected"><a href="#"><i class="nav-icon"></i><span>Hyperlax</span></a>
 					<li class="location-nav"><a href="#"><i class="fa fa-map-marker fa-lg"></i><span>location</span></a>
 					<li class="music-nav"><a href="#"><i class="fa fa-music fa-lg"></i><span>music</span></a>
 					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i><span>about</span></a></li><a href="http://twitter.com/taykcrane" id="twitter" target="_blank"><i class="fa fa-twitter fa-lg"></i><span>@taykcrane</span></a>
@@ -81,7 +82,7 @@
 								</div>
 								<div class="start">
 									<div class="hit-me">
-										<i class="fa fa-play fa-3x"></i><h1>HIT ME!</h1>
+										<i class="fa fa-play fa-2x"></i><h1>Let's Go!</h1>
 									</div>
 									<p><span>Start without music</span></p>
 								</div>
@@ -96,10 +97,10 @@
 								</div>
 								<div class="social-share">
 									<p>cool enough to share?</p>
-									<a class="social-popup" href="https://twitter.com/intent/tweet/?text=Enjoy%20a%20real-time%20feed%20of%20Instagram's%20latest%20%23Hyperlapse%20videos:%20&url=http%3A%2F%2Fhyperlax.tv&via=taykcrane" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-									<a class="social-popup" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fhyperlax.tv%2F" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+									<a class="social-popup" href="https://twitter.com/intent/tweet/?text=Enjoy%20a%20real-time%20feed%20of%20Instagram's%20latest%20%23Hyperlapse%20videos:%20&url=http%3A%2F%2Fhyperlax.tv&via=taykcrane" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+									<a class="social-popup" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fhyperlax.tv%2F" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
 								</div>
-								<p class="dark-mode"><i class="fa fa-lightbulb-o fa-3x"></i></p>
+								<p class="dark-mode"><i class="fa fa-lightbulb-o fa-2x"></i></p>
 							</div>
 						</div>	
 					</div>
@@ -143,7 +144,7 @@
 					<div class="content-animation">
 						<div class="container">
 							<div class="top-box">
-								<p class="description">Hyperlax is best when watched with relaxing and chill music in the background. Choose from the playlists below, courtesy of <a href="http://soundcloud.com">Soundcloud</a>.</p>
+								<p class="music-sum">Hyperlax is best when watched with relaxing and chill music in the background. Choose from the playlists below, courtesy of <a href="http://soundcloud.com">Soundcloud</a>.</p>
 							</div>
 							<div class="bottom-box">
 								<ul class="playlist-choices">
