--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta property="og:url" content="http://hyperlax.tv/" /> 
 	<meta property="og:title" content="Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos"/>
 	<meta property="og:site_name" content="Hyperlax"/>
-	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!" />
-	<meta property="og:description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!" />
+	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peek into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!" />
+	<meta property="og:description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!" />
 	<meta property="og:image" content="img/hyperlax-logo-facebook-2.png" />
 	<meta name="keyword" content="hyperlax, hyperlax.tv, hyperlapse, instagram, video, videos, made in nyc, taykcrane, taylor crane, real-time, soundcloud">
 	<meta charset="UTF-8" />
@@ -166,7 +166,7 @@
 						<div class="container">
 							<div class="top-box">
 								<div class="about-content">
-									<p>Do you see those Instagram <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos on the left? They were just posted to Instagram; it's a real-time feed. Enjoy a peek into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!</p>
+									<p>Do you see those Instagram <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos on the left? They were just posted to Instagram; it's a real-time feed. Enjoy a peek into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!</p>
 									<p>Hyperlax was created as a way for me (<a href="https://twitter.com/taykcrane" target="_blank">@taykcrane</a>) to begin learning how to code. It was inspired by <a href="http://hypermasher.com" target="_blank">Hypermasher</a>, a site with an almost identical concept, built by Andrew Baker (<a href="https://twitter.com/andrewtorkbaker" target="_blank">@andrewtorkbaker</a>). I was drawn to <a href="http://hypermasher.com" target="_blank">Hypermasher</a>, but felt like there were a few things I could do to make it better. And thus, Hyperlax was born!</p>
 									<p>If you've read this far, I'd honestly love your feedback. Positive/negative/neutral, feature requests/bug fixes, massive donations/angry rants can all be sent to <span class="email">taylorkcrane@gmail.com</span>. I don't know if anyone is going to like this thing, so if you do, seriously let me know.</p>
 								</div>
