--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos"/>
 	<meta property="og:site_name" content="Hyperlax"/>
 	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peek into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!" />
-	<meta property="og:description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!" />
+	<meta property="og:description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peek into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyeuristic, a bit relaxing. I think it's mesmerizing. Maybe you will too!" />
 	<meta property="og:image" content="img/hyperlax-logo-facebook-2.png" />
 	<meta name="keyword" content="hyperlax, hyperlax.tv, hyperlapse, instagram, video, videos, made in nyc, taykcrane, taylor crane, real-time, soundcloud">
 	<meta charset="UTF-8" />
