--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 	</div>
 	
 
+<script src="js/soundmanager2-jsmin.js"></script>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
