--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 <script src="js/datamaps.js"></script>
 <script src="js/pause.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="js/soundmanager2-nodebug-jsmin.js"></script>
 <script src="http://connect.soundcloud.com/sdk.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/trunk8/1.3.3/trunk8.js"></script>
 <script src="js/ResizeSensor.js"></script>
